# plc_logging

./: .flake8  README.md  main.py  plc_logging.py  pyproject.toml
src/siemens/: LoggerFb.scl  LoggerLevels.xml  logger._log.scl  logger.config_in_block.scl  logger.critical_0.scl  logger.critical_1.scl  logger.critical_2.scl  logger.critical_3.scl  logger.debug_0.scl  logger.debug_1.scl  logger.debug_2.scl  logger.debug_3.scl  logger.error_0.scl  logger.error_1.scl  logger.error_2.scl  logger.error_3.scl  logger.info_0.scl  logger.info_1.scl  logger.info_2.scl  logger.info_3.scl  logger.warning_0.scl  logger.warning_1.scl  logger.warning_2.scl  logger.warning_3.scl  logger.xml  plc_logging_siemens_20220731_2021.zap17
